# grns

./: AUTHORS  CMakeLists.txt  README.md
src/: bitwise.cuh  common.cuh  dinterval.cuh  extrange.cuh  modular.cuh  mpint.cuh  mrc.cuh  pairwise.cuh  params.h  rnsbase.cuh  rnscmp.cuh  rnsdiv.cuh  rnseval.cuh  rnsscal.cuh  roundings.cuh  types.cuh
src/dpp/: rnsmax.cuh
src/params/moduli-10-69-bit/: params.10m.36b.h  params.11m.41b.h  params.12m.47b.h  params.13m.52b.h  params.14m.58b.h  params.15m.63b.h  params.16m.69b.h  params.4m.10b.h  params.5m.13b.h  params.6m.17b.h  params.7m.22b.h  params.8m.26b.h  params.9m.31b.h
src/params/moduli-100-6400-bit/: params.128m.3200b.h  params.16m.400b.h  params.256m.6400b.h  params.32m.800b.h  params.4m.100b.h  params.64m.1600b.h  params.8m.200b.h
src/params/moduli-64-4096-bit/: params.128m.2048b.h  params.16m.256b.h  params.256m.4096b.h  params.32m.512b.h  params.4m.64b.h  params.64m.1024b.h  params.8m.128b.h
tests/: CMakeLists.txt  logger.cuh  test_perf_mpint.cu  test_perf_mpint_add.cu  test_perf_rnscmp.cu  test_perf_rnsdiv.cu  test_perf_rnseval.cu  test_perf_rnsmax.cu  test_verify_extrange.cu  test_verify_mpint.cu  test_verify_mrc.cu  test_verify_reduction.cu  test_verify_rnsdiv.cu  test_verify_rnseval.cu  test_verify_rnsmax.cu  timers.cuh  tsthelper.cuh
